--- a/src/MVC/Vistas/Secretaria/FrmRegistroSecretaria.form
+++ b/src/MVC/Vistas/Secretaria/FrmRegistroSecretaria.form
@@ -250,17 +250,17 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="registrarseSesionBtnTxt1" alignment="0" pref="310" max="32767" attributes="0"/>
+                  <Component id="continuarBtnTxt" alignment="0" pref="310" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="registrarseSesionBtnTxt1" alignment="0" pref="40" max="32767" attributes="0"/>
+                  <Component id="continuarBtnTxt" alignment="0" pref="40" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="registrarseSesionBtnTxt1">
+            <Component class="javax.swing.JLabel" name="continuarBtnTxt">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto Condensed" size="14" style="1"/>
@@ -275,9 +275,9 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxt1MouseClicked"/>
-                <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxt1MouseEntered"/>
-                <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxt1MouseExited"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="continuarBtnTxtMouseClicked"/>
+                <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="continuarBtnTxtMouseEntered"/>
+                <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="continuarBtnTxtMouseExited"/>
               </Events>
             </Component>
           </SubComponents>
