Se crean los segundos frames de registro

--- a/src/MVC/Vistas/Oficiales/FrmLoginOficiales.form
+++ b/src/MVC/Vistas/Oficiales/FrmLoginOficiales.form
@@ -365,17 +365,17 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="registrarseSesionBtnTxt1" alignment="0" pref="130" max="32767" attributes="0"/>
+                  <Component id="registrarseSesionBtnTxt" alignment="0" pref="130" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="registrarseSesionBtnTxt1" alignment="0" pref="40" max="32767" attributes="0"/>
+                  <Component id="registrarseSesionBtnTxt" alignment="0" pref="40" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="registrarseSesionBtnTxt1">
+            <Component class="javax.swing.JLabel" name="registrarseSesionBtnTxt">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto Condensed" size="14" style="1"/>
@@ -390,9 +390,9 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxt1MouseClicked"/>
-                <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxt1MouseEntered"/>
-                <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxt1MouseExited"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxtMouseClicked"/>
+                <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxtMouseEntered"/>
+                <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="registrarseSesionBtnTxtMouseExited"/>
               </Events>
             </Component>
           </SubComponents>
