--- a/src/MVC/Vistas/Oficiales/FrmRegistroOficiales.form
+++ b/src/MVC/Vistas/Oficiales/FrmRegistroOficiales.form
@@ -448,9 +448,9 @@
               <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-              <Format format="YYYY-MM-DD" subtype="-1" type="1"/>
+              <Format format="yyyy-MM-dd" subtype="-1" type="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="YYYY-MM-DD"/>
+            <Property name="text" type="java.lang.String" value="yyyy-MM-dd"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="12" style="0"/>
@@ -461,7 +461,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="420" y="150" width="410" height="20"/>
+              <AbsoluteConstraints x="420" y="150" width="310" height="20"/>
             </Constraint>
           </Constraints>
         </Component>
