--- a/src/MVC/Vistas/Secretaria/FrmRegistroSecretaria.form
+++ b/src/MVC/Vistas/Secretaria/FrmRegistroSecretaria.form
@@ -448,7 +448,7 @@
               <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-              <Format format="YYYY-MM-DD" subtype="-1" type="1"/>
+              <Format format="yyyy-MM-dd" subtype="-1" type="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="yyyy-MM-dd"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
